# ai-viz

./: .env.example  .gitignore  CLAUDE.md  ISS_AI_Solution.html  local.db-info  pyproject.toml
.github/workflows/: daily-data.yml  daily-update-deploy.yml  deploy.yml
data/: turso_local.db-info
data/aggregated/: market_summary.json
data/quality/: check_2026-03-18.json  check_2026-03-19.json  check_2026-03-20.json  check_2026-03-23.json  check_2026-03-24.json  check_2026-03-25.json  check_2026-03-26.json  check_2026-03-27.json  check_2026-03-30.json  check_2026-03-31.json  check_2026-04-01.json  check_2026-04-02.json  check_2026-04-03.json  check_2026-04-06.json  check_2026-04-07.json  check_2026-04-08.json  check_2026-04-09.json  check_2026-04-10.json  check_2026-04-13.json  check_2026-04-14.json  check_2026-04-15.json  check_2026-04-16.json  check_2026-04-17.json  check_2026-04-20.json  check_2026-04-21.json  check_2026-04-22.json  check_2026-04-23.json  check_2026-04-24.json  check_2026-04-27.json  check_2026-04-28.json  check_2026-04-29.json  check_2026-04-30.json  check_2026-05-01.json  check_2026-05-04.json  check_2026-05-05.json  check_2026-05-06.json  check_2026-05-07.json  check_2026-05-08.json  check_2026-05-11.json  check_2026-05-12.json  (+51 more)
docs/: DECISIONS.md  FINANCE-REVIEW.md  HOSTING.md  PRODUCT-SPEC.md  STRATEGIC-REVIEW.md  intro.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  wrangler.toml
src/db/: turso.py
src/models/: schema.py
src/pipeline/: daily.py  export_tables.py  init_local.py  init_turso.py
tests/: test_collectors.py
(+59 files in other folders)
