[project]
name = "ai-viz"
version = "0.1.0"
description = "Financial Data Visualization Platform"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14",
    "yfinance>=0.2",
    "tushare>=1.4",
    "polars>=1.0",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
